--- a/sexshop/appsexshop/templates/crud/subcategorias.html
+++ b/sexshop/appsexshop/templates/crud/subcategorias.html
@@ -60,7 +60,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="{% url 'crudSubCategorias' %}">
+          <a class="nav-link active" href="{% url 'listadosubcategorias' %}">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
               <i class="fa-solid fa-plus text-danger text-sm opacity-10"></i>
             </div>
@@ -107,7 +107,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="{% url 'Ladingpage'%}"><i class="fa-solid fa-house text-danger me-2"></i>Home</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'listadocategorias' %}"><i class="fa-solid fa-pen-to-square text-danger me-2"></i>Categorias</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'crudSubCategorias' %}"><i class="fa-solid fa-plus text-danger me-2"></i>Sub-Categorias</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'listadosubcategorias' %}"><i class="fa-solid fa-plus text-danger me-2"></i>Sub-Categorias</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'crudProductos' %}"><i class="fa-solid fa-tag text-danger me-2"></i>Productos</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'crudDomiciliarios' %}"><i class="fa-solid fa-motorcycle text-danger me-2"></i>Domiciliarios</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'crudUsuarios' %}"><i class="fa-solid fa-user text-danger me-2"></i>Usuarios</a></li>
